<resources>
    <string name="app_name">II Semana de Meio Ambiente</string>

    <string name="todo">TODO</string>
    <string name="programa_o">Programação</string>

    <string name="qrcode">LEITOR QRCODE</string>


    <string name="pro0406">Programação para o dia 04 de junho.</string>
    <string name="pro0506">Programação para o dia 05 de junho.</string>
    <string name="pro0606">Programação para o dia 06 de junho.</string>


    <string name="pro0406_1">07:30 – 10:30</string>
    <string name="pro0406_2">10:30 – 11:00</string>

    <string name="pro0406_3">Mesa Redonda: Preservação, conservação e recuperação dos recursos hídricos na região Tocantina.</string>

    <string name="minicursos">09:30 - 12:30</string>
    <string name="oficinas">09:30 - 12:30</string>
    <string name="palestras">15:00 - 18:00</string>





    <!--Descrição-->

    <!--Felipe-->
    <string name="title_minicurso_felipe">Aquaponia na prática</string>
    <string name="felipe_descricao">    A aquaponia ou sistema aquapônico é o resultado da interligação entre dois sistemas muito conhecidos: a piscicultura e a hidroponia. O objetivo do minicurso é ensinar como se constrói um sistema de aquaponia, quais plantas cultivar, os peixes utilizados e materiais necessários.</string>


    <!--Pedro-->
    <string name="title_minicurso_pedro">Produção de mudas para recuperação de mata ciliar</string>
    <string name="pedro_descricao">    O Curso sobre produção de mudas para recuperação de mata ciliar aborda as principais características físicas e ambientais adequadas a um viveiro florestal e o manejo dos fatores determinantes da boa qualidade de mudas de espécies florestais, com foco nos recursos de crescimento – água, luz, temperatura e nutrientes.</string>



    <!--Joyce-->
    <string name="title_minicurso_joyce">A gestão de resíduos sólidos e sua implicação na qualidade da água</string>
    <string name="joyce_descricao">    O minicurso “A gestão de resíduos sólidos e sua implicação na qualidade da água” promoverá uma discussão acerca da classificação dos resíduos e das necessárias práticas para garantir a qualidade dos recursos hídricos disponíveis para a cidade de Porto Franco (MA).</string>



    <!--João-->
    <string name="title_minicurso_joao">Água: bem comum ou recurso privado?</string>
    <string name="joao_descricao">    Momento de pensar sobre a mercantilização da água e seus impactos geopolíticos e sociais. O ponto de partida para o debate do tema será o registro audiovisual sobre o contexto da chamada "Guerra da Água" ocorrida em 2000 na Bolívia.</string>



    <!--Alana-->
    <string name="title_oficina_alana">Rciclagem e reutilização de resíduos sólidos</string>
    <string name="alana_descricao">    A reciclagem dos resíduos sólidos é uma das alternativas sustentáveis para diminuir o acúmulo de lixo nas cidades. Tendo em vista essa realidade, esta oficina tem como proposta a reciclagem de resíduos sólidos, buscando promover uma conscientização sobre a geração de lixo e o seu descarte apropriado.</string>



    <!--Régia-->
    <string name="title_oficina_regia">Compostagem doméstica</string>
    <string name="regia_descricao">    A oficina abordará conceitos básicos, a importância ecológica e econômica da compostagem doméstica, etapas da compostagem, produção e utilização da composteira, compostagem como mecanismo de reciclagem de resíduos orgânicos domésticos.</string>

</resources>
